# alpha

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
apps/operator/: README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/operator/drizzle/: 0001_initial.sql
apps/operator/src/: env.ts  index.ts
apps/operator/src/__tests__/: health.test.ts  hmac.test.ts
apps/operator/src/chain/: connection.ts  expire.ts  oracle.ts  payout.ts  pdas.ts  upline.ts
apps/operator/src/db/: schema.ts
apps/operator/src/lib/: hmac.ts  idempotency.ts
apps/operator/src/workers/: merchant.ts  oracle.ts  placement.ts  purchase.ts  rpc-cache.ts  scheduler.ts
apps/web/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
apps/web/public/: simulator.html
apps/web/scripts/: gen-og.ts
apps/web/src/: worker.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/explorer/: page.tsx
apps/web/src/components/: HomeNetworkPreview.tsx  NetworkTree.tsx  PubkeyChip.tsx  SiteFooter.tsx  StatTile.tsx  TopNav.tsx  TxFeed.tsx  WalletProviders.tsx
apps/web/src/lib/: program-clients.ts  wallet-actions.ts
docs/: README.md  architecture.md  mechanics.md  merchant-integration.md  operator-guide.md  payout.md
programs/conexple-escrow/: Cargo.toml
programs/conexple-escrow/src/: error.rs  lib.rs  state.rs
programs/conexple-network/: Cargo.toml
programs/conexple-network/src/: error.rs  lib.rs  state.rs
programs/conexple-oracle/: Cargo.toml
programs/conexple-oracle/src/: error.rs  lib.rs  state.rs
programs/conexple-protocol/: Cargo.toml
programs/conexple-protocol/src/: error.rs  lib.rs  state.rs
scripts/: add-user-wallet-highlight.py  build-pitch-video.py  build-tech-screencast.py  build-tech-video.py  build-thumbnails.py  demo-purchases.ts  deploy-devnet.sh  e2e-smoke.ts  expire-onchain.ts  gen-favicon.py  init-merchant-byok.ts  init-merchant.ts  init-network.ts  mint-demo-usdc.ts  polish-videos.py  preview-channel-banner.py  rebuild-tech-scene07.py  record-wallet-flow.py  seed-demo.ts  seed-user-downline.ts  settle-onchain.ts  splice-wallet.py
submission/: HANDOFF.md  byok-merchant-04-receipt.json  byok-phase2-receipt.json  pitch-deck-outline.md  pitch-script.md  rotation-receipt.json  settle-receipt.json  smoke-receipt.json  tech-demo-script.md
tests/: full-flow.ts  package.json
(+2 files in other folders)
