[workspace]
resolver = "2"
members = [
    "programs/conexple-protocol",
    "programs/conexple-network",
    "programs/conexple-escrow",
    "programs/conexple-oracle",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
