[package]
name = "conexple-escrow"
version = "0.1.0"
description = "Conexple — merchant USDC escrow, payouts, social/operator pool"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "conexple_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "conexple-network/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
conexple-network = { path = "../conexple-network", features = ["cpi"] }
