[package]
name = "conexple-network"
version = "0.1.0"
description = "Conexple — Position state, network mutations, ancestor traversal"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "conexple_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "conexple-protocol/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
conexple-protocol = { path = "../conexple-protocol", features = ["cpi"] }
